fix: ajouter l'attribut data-theme à la balise html et configurer le plugin daisyui

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: lapince;
+};
 @plugin "daisyui/theme" {
   name: "lapince";
   default: true;
