--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: lapince --default, dark --prefersdark;
+  themes: light --default, dark --prefersdark;
 };
 
 @plugin "daisyui/theme" {
